align Incomes and Expenses with flex-direction and flex start, and correct nav bar height

--- a/frontend-budget-app/src/index.css
+++ b/frontend-budget-app/src/index.css
@@ -335,6 +335,11 @@ code {
   margin: 10px;
 }
 
+.high-light {
+  text-decoration: none;
+  color: black;
+}
+
 @media screen and (max-width: 768px){
   body {
     font-size: 2em;
@@ -354,16 +359,16 @@ code {
     padding: 15px;
     margin: 15px;
   }
-  .ExpenseInput, .IncomeInput {
+  .ExpenseInput, .IncomeInput, .inputs {
     margin-top: 25px;
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-items: left;
+    justify-content:flex-end;
+    align-items: flex-end;
   }
 
   .nav-container{
-    height: auto;
+    height: 130px;
   }
 
   .input {
